Update header, footer style

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="center">
   <div class="caption">
     Make with <i class="fa fa-heart"></i> by <strong>Thang Pham</strong>
   </div>
