--- a/src/news/containers/news/news.component.html
+++ b/src/news/containers/news/news.component.html
@@ -1,5 +1,7 @@
 <div class="news">
-  <mat-spinner color="accent" mode="intermediate" *ngIf="(loading$ | async)"></mat-spinner>
+  <div class="news__loading center" *ngIf="(loading$ | async)">
+    <mat-spinner [diameter]="50" color="accent" mode="intermediate"></mat-spinner>
+  </div>
   <app-news-item *ngFor="let details of (news$ | async)" [details]="details"></app-news-item>
   <div class="news__load-more">
     <button mat-button color="primary">LOAD MORE</button>
