--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,12 +1,10 @@
 footer {
   height: 60px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
 
   .caption {
     .fa-heart {
       color: red;
+      padding: 0 2px;
     }
   }
 }
