--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,9 @@ body {
   margin: 0;
   background-color: $snow;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
