--- a/src/news/components/news-item/news-item.component.scss
+++ b/src/news/components/news-item/news-item.component.scss
@@ -1,3 +1,42 @@
-.news__container {
-  margin: 15px 0;
+@import "../../../assets/style/variable";
+
+.news {
+  &__container {
+    margin: 15px 0;
+  }
+
+  &__item {
+    padding: 30px;
+  }
+
+  &__header {
+
+    .snipped {
+      font-size: 20px;
+      font-weight: bold;
+      color: $charcoal;
+    }
+
+    .pub-date {
+      color: $dark-gray;
+      font-size: 15px;
+      padding: 10px 0;
+    }
+  }
+
+  &__multimedia {
+
+    img {
+      width: 100%;
+    }
+  }
+
+  &__footer {
+    padding: 10px 0 0 0;
+
+    .source {
+      text-align: right;
+      color: $charcoal;
+    }
+  }
 }
