Refactor and update news-item

--- a/src/news/components/news-item/news-item.component.html
+++ b/src/news/components/news-item/news-item.component.html
@@ -1,20 +1,18 @@
-<div class="news__container mat-elevation-z2">
-  <div class="news__item">
-    <div class="news__header">
-      <div class="snipped">
-        {{details?.snippet}}
-      </div>
-      <div class="pub-date">
-        {{details?.pub_date | date:'medium'}}
-      </div>
+<div class="news__item">
+  <div class="news__header">
+    <div class="snipped">
+      {{details?.headline.main}}
     </div>
-    <div class="news__multimedia">
-      <img [src]="'http://www.nytimes.com/' + details.multimedia[0]?.url" alt="">
+    <div class="pub-date">
+      {{details?.pub_date | date:'medium'}}
     </div>
-    <div class="news__footer">
-      <div class="source">
-        <span>Source: </span>{{details?.source}}
-      </div>
+  </div>
+  <div class="news__multimedia" *ngIf="details.multimedia[0]">
+    <img [src]="'http://www.nytimes.com/' + details.multimedia[0]?.url" alt="">
+  </div>
+  <div class="news__footer">
+    <div class="source">
+      <span>Source: </span>{{details?.source}}
     </div>
   </div>
 </div>
