--- a/src/assets/style/_variable.scss
+++ b/src/assets/style/_variable.scss
@@ -6,3 +6,9 @@ $charcoal: #494848;
 $dark-gray: #A8A7A7;
 $light-grey: #D0D0D0;
 $pink-flare: #C6BCBD;
+
+@mixin tablet-breakpoint-down {
+  @media screen and (max-width: 768px) {
+    @content
+  }
+}
