--- a/src/news/components/news-item/news-item.component.scss
+++ b/src/news/components/news-item/news-item.component.scss
@@ -1,12 +1,13 @@
 @import "../../../assets/style/variable";
 
 .news {
-  &__container {
-    margin: 15px 0;
-  }
 
   &__item {
     padding: 30px;
+
+    @include tablet-breakpoint-down {
+      padding: 15px;
+    }
   }
 
   &__header {
