--- a/src/news/containers/news/news.component.html
+++ b/src/news/containers/news/news.component.html
@@ -7,6 +7,6 @@
     <mat-spinner [diameter]="50" color="accent" mode="intermediate"></mat-spinner>
   </div>
   <div class="news__load-more">
-    <button mat-button color="primary" (click)="loadMore()">LOAD MORE</button>
+    <button mat-raised-button color="primary" (click)="loadMore()">LOAD MORE</button>
   </div>
 </div>
